--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meteor-app",
+  "name": "solar-system",
   "private": true,
   "scripts": {
     "start": "meteor run",
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.20.7",
+    "bcrypt": "^5.1.1",
     "meteor-node-stubs": "^1.2.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.28.0"
   },
   "meteor": {
     "mainModule": {
@@ -21,6 +23,7 @@
     "testModule": "tests/main.js"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.14"
